# commit-bingo

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  Makefile  NICEGUI_NOTES.md  README.md  app.py  main.py  phrases.txt  pyproject.toml  pytest.ini  setup.sh
.github/workflows/: ci.yml  docker-build-publish.yml  docker-build-publish.yml.disabled  helm-chart.yml  helm-chart.yml.disabled  release-pipeline.yml
.serena/: project.yml
.serena/memories/: bingo_project_overview.md  code_style_conventions.md  git_history_insights.md  incomplete_branch_strategy.md  nicegui_storage_architecture_findings.md  project_architecture_details.md  state_persistence_architecture_analysis.md  state_persistence_refactor_progress.md  suggested_commands.md  task_completion_checklist.md
helm/: package.sh
helm-charts/bingo/: Chart.yaml  values.yaml
helm-charts/bingo/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
helm/bingo/: .helmignore  Chart.yaml  values.yaml
helm/bingo/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
scripts/: tag_tests.py
src/config/: constants.py  styles.py
src/core/: __init__.py  board.py  game_logic.py  phrases.py  state_manager.py  win_patterns.py
src/types/: __init__.py  ui_types.py
src/ui/: board_builder.py  board_view.py  components.py  controls.py  head.py  pages.py  routes.py  styling.py  sync.py
src/utils/: file_monitor.py  file_operations.py  javascript.py  text_processing.py
tests/: README.md  README_multi_session_tests.md  test_board.py  test_board_builder.py  test_e2e.py  test_file_operations.py  test_file_operations_unit.py  test_game_logic.py  test_game_logic_unit.py  test_helpers.py  test_hot_reload_integration.py  test_hot_reload_integration_improved.py  test_hot_reload_manual.py  test_integration.py  test_integration_display.py  test_multi_session_bdd.py  test_multi_session_responsiveness.py  test_multi_session_simple.py  test_phrases.py  test_phrases.txt  test_state_manager.py  test_state_persistence.py  test_state_persistence_bdd.py  test_state_persistence_bugs.py  test_state_persistence_issues.py  test_text_processing.py  test_text_processing_unit.py  test_ui_functions.py  test_ui_integration.py  test_win_patterns.py
tests/features/: board_generation.feature  game_mechanics.feature  health_monitoring.feature  multi_session_concurrent.feature  multi_view_sync.feature  state_persistence.feature  user_experience.feature
