[tool.poetry]
name = "bingo"
version = "0.1.0"
description = ""
authors = ["Offending Commit <offendingcommit@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
exclude = [".git", ".git/"]

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^2.11.0"


[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
